# madebysteven-ha-addons

./: .gitignore  .hadolint.yaml  CLAUDE.md  README.md  package-lock.json  package.json  repository.json
.github/workflows/: release.yml  validate.yml
dwmp/: .releaserc.json  CHANGELOG.md  Dockerfile  README.md  config.yaml  package.json  run.sh
picnic/: .env.example  .gitignore  .releaserc.json  Dockerfile  Makefile  README.md  compose.yml  config.yaml  package.json  run.sh
picnic/backend/: Dockerfile  pyproject.toml
picnic/backend/src/: config.py  main.py  picnic_client.py
picnic/backend/src/models/: picnic.py
picnic/backend/src/routers/: auth.py  basket.py  delivery.py  health.py  recipes.py  search.py
picnic/backend/tests/: conftest.py  test_basket.py  test_delivery.py  test_health.py  test_recipes.py  test_search.py
picnic/frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
picnic/frontend/src/: api.test.ts  api.ts  main.ts  router.test.ts  router.ts  theme.test.ts  theme.ts  types.ts
picnic/frontend/src/components/: app-shell.ts  basket-item.ts  recipe-card.ts  search-bar.ts  swipe-deck.ts  toast-message.ts
picnic/frontend/src/pages/: basket-page.ts  delivery-page.ts  login-page.ts  not-found-page.ts  search-page.ts  swipe-page.ts
scripts/: install-hooks.sh  pre-commit  pre-push  shared.sh
